bad/assign_uop_bneg_void.example_compiler_output
ERROR
[1mbad/assign_uop_bneg_void.lat:5:9: [1;31merror: [0;1mleft side is not assignable[m
	!false = vfunc();
	       [1;32m^[m
[1mbad/assign_uop_bneg_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	!false = vfunc();
	[1;32m^[m
